--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -348,7 +348,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="./SMB1R.apk"
+export_path="para_android/SMB1R.apk"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -369,10 +369,10 @@ gradle_build/export_format=0
 gradle_build/min_sdk=""
 gradle_build/target_sdk=""
 gradle_build/custom_theme_attributes={}
-architectures/armeabi-v7a=false
-architectures/arm64-v8a=false
+architectures/armeabi-v7a=true
+architectures/arm64-v8a=true
 architectures/x86=true
-architectures/x86_64=false
+architectures/x86_64=true
 version/code=1
 version/name=""
 package/unique_name="com.example.$genname"
@@ -409,7 +409,7 @@ permissions/access_checkin_properties=false
 permissions/access_coarse_location=false
 permissions/access_fine_location=false
 permissions/access_location_extra_commands=false
-permissions/access_media_location=false
+permissions/access_media_location=true
 permissions/access_mock_location=false
 permissions/access_network_state=false
 permissions/access_surface_flinger=false
@@ -448,8 +448,8 @@ permissions/change_configuration=false
 permissions/change_network_state=false
 permissions/change_wifi_multicast_state=false
 permissions/change_wifi_state=false
-permissions/clear_app_cache=false
-permissions/clear_app_user_data=false
+permissions/clear_app_cache=true
+permissions/clear_app_user_data=true
 permissions/control_location_updates=false
 permissions/delete_cache_files=false
 permissions/delete_packages=false
@@ -477,14 +477,14 @@ permissions/kill_background_processes=false
 permissions/location_hardware=false
 permissions/manage_accounts=false
 permissions/manage_app_tokens=false
-permissions/manage_documents=false
-permissions/manage_external_storage=false
+permissions/manage_documents=true
+permissions/manage_external_storage=true
 permissions/master_clear=false
 permissions/media_content_control=false
 permissions/modify_audio_settings=false
 permissions/modify_phone_state=false
-permissions/mount_format_filesystems=false
-permissions/mount_unmount_filesystems=false
+permissions/mount_format_filesystems=true
+permissions/mount_unmount_filesystems=true
 permissions/nfc=false
 permissions/persistent_activity=false
 permissions/post_notifications=false
@@ -497,9 +497,9 @@ permissions/read_frame_buffer=false
 permissions/read_history_bookmarks=false
 permissions/read_input_state=false
 permissions/read_logs=false
-permissions/read_media_audio=false
-permissions/read_media_images=false
-permissions/read_media_video=false
+permissions/read_media_audio=true
+permissions/read_media_images=true
+permissions/read_media_video=true
 permissions/read_media_visual_user_selected=false
 permissions/read_phone_state=false
 permissions/read_profile=false
@@ -547,7 +547,7 @@ permissions/write_apn_settings=false
 permissions/write_calendar=false
 permissions/write_call_log=false
 permissions/write_contacts=false
-permissions/write_external_storage=false
+permissions/write_external_storage=true
 permissions/write_gservices=false
 permissions/write_history_bookmarks=false
 permissions/write_profile=false
@@ -557,3 +557,71 @@ permissions/write_sms=false
 permissions/write_social_stream=false
 permissions/write_sync_settings=false
 permissions/write_user_dictionary=false
+
+[preset.7]
+
+name="Windows Desktop (ETC2-ASTC)"
+platform="Windows Desktop"
+runnable=false
+advanced_options=false
+dedicated_server=false
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="ESTC/SMB1R.exe"
+patches=PackedStringArray()
+encryption_include_filters=""
+encryption_exclude_filters=""
+seed=0
+encrypt_pck=false
+encrypt_directory=false
+script_export_mode=2
+
+[preset.7.options]
+
+custom_template/debug=""
+custom_template/release=""
+debug/export_console_wrapper=1
+binary_format/embed_pck=false
+texture_format/s3tc_bptc=false
+texture_format/etc2_astc=true
+shader_baker/enabled=false
+binary_format/architecture="x86_64"
+codesign/enable=false
+codesign/timestamp=true
+codesign/timestamp_server_url=""
+codesign/digest_algorithm=1
+codesign/description=""
+codesign/custom_options=PackedStringArray()
+application/modify_resources=true
+application/icon=""
+application/console_wrapper_icon=""
+application/icon_interpolation=4
+application/file_version=""
+application/product_version=""
+application/company_name=""
+application/product_name=""
+application/file_description=""
+application/copyright=""
+application/trademarks=""
+application/export_angle=0
+application/export_d3d12=0
+application/d3d12_agility_sdk_multiarch=true
+ssh_remote_deploy/enabled=false
+ssh_remote_deploy/host="user@host_ip"
+ssh_remote_deploy/port="22"
+ssh_remote_deploy/extra_args_ssh=""
+ssh_remote_deploy/extra_args_scp=""
+ssh_remote_deploy/run_script="Expand-Archive -LiteralPath '{temp_dir}\\{archive_name}' -DestinationPath '{temp_dir}'
+$action = New-ScheduledTaskAction -Execute '{temp_dir}\\{exe_name}' -Argument '{cmd_args}'
+$trigger = New-ScheduledTaskTrigger -Once -At 00:00
+$settings = New-ScheduledTaskSettingsSet -AllowStartIfOnBatteries -DontStopIfGoingOnBatteries
+$task = New-ScheduledTask -Action $action -Trigger $trigger -Settings $settings
+Register-ScheduledTask godot_remote_debug -InputObject $task -Force:$true
+Start-ScheduledTask -TaskName godot_remote_debug
+while (Get-ScheduledTask -TaskName godot_remote_debug | ? State -eq running) { Start-Sleep -Milliseconds 100 }
+Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorAction:SilentlyContinue"
+ssh_remote_deploy/cleanup_script="Stop-ScheduledTask -TaskName godot_remote_debug -ErrorAction:SilentlyContinue
+Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorAction:SilentlyContinue
+Remove-Item -Recurse -Force '{temp_dir}'"
